# biofx_python

./: .gitignore  Makefile  README.md  SETUP.md  pylintrc  pyproject.toml  requirements.txt
01_dna/: .gitignore  DISCUSSION.adoc  Makefile  README.md  solution1_iter.py  solution2_unit.py  solution3_str_count.py  solution4_dict.py  solution5_dict.py  solution6_defaultdict.py  solution7_counter.py
02_rna/: .gitignore  Makefile  README.md  _solution3.py  _solution4.py  _solution5.py  _solution6.py  all_test.sh  genseq.py  solution1_str_replace.py  solution2_re_sub.py
03_revc/: .gitignore  Makefile  README.md  solution1_for_loop.py  solution2_dict_lookup_list.py  solution2_dict_lookup_string.py  solution3_list_comprehension.py  solution4_str_translate.py  solution5_bio_seq.py
04_fib/: .gitignore  Makefile  README.md  solution1_list.py  solution1_list_closure.py  solution1_list_function.py  solution2_generator.py  solution2_generator_for_loop.py  solution2_generator_islice.py  solution3_recursion.py  solution3_recursion_lru_cache.py  solution3_recursion_memoize.py  solution3_recursion_memoize_decorator.py
05_gc/: .gitignore  DISCUSSION.adoc  Makefile  README.adoc  README.md  bench.sh  gc.orig  genseq.py  solution1_list.py  solution2_unit.py  solution2_unit_test.py  solution3_max_var.py  solution4_list_comp.py  solution5_filter.py  solution6_map.py  solution7_re.py  solution8_list_comp_map.py
06_hamm/: .gitignore  Makefile  README.adoc  README.md  solution1_abs_iterate.py  solution2_unit_test.py  solution2_zip.py  solution3_zip.py  solution3_zip_longest.py  (+9 more)
(+321 files in other folders)
