[project]
name = "biofx-python"
version = "0.1.0"
description = "Code and tests for Mastering Python for Bioinformatics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.86",
    "black>=26.1.0",
    "csvchk>=0.3.2",
    "csvkit>=2.2.0",
    "flake8>=7.3.0",
    "graphviz>=0.21",
    "iteration-utilities>=0.13.0",
    "mypy>=1.19.1",
    "new-py>=0.1.2",
    "pandas>=3.0.0",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "pytest-flake8>=1.3.0",
    "pytest-mypy>=1.0.1",
    "pytest-pylint>=0.21.0",
    "requests>=2.32.5",
    "rich>=14.3.2",
    "seqmagick>=0.8.6",
    "tabulate>=0.9.0",
    "ty>=0.0.15",
    "yapf>=0.43.0",
]
